# django-postgres-metrics

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  README.rst  post_screenshot_comment.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  test-deploy.yml  test.yml
docs/: .gitignore  Makefile  make.bat  requirements.txt
docs/source/: background.rst  changelog.rst  conf.py  designing-your-own.rst  ext.py  getting-started.rst  index.rst  usage.rst
docs/source/contributing/: index.rst  releasing.rst
docs/source/ref/: index.rst  modules.rst  postgres_metrics.apps.rst  postgres_metrics.metrics.rst  postgres_metrics.rst  postgres_metrics.templatetags.rst  postgres_metrics.urls.rst  postgres_metrics.views.rst
example/: manage.py
example/example/: settings.py  urls.py
postgres_metrics/: __init__.py  apps.py  constants.py  metrics.py  models.py  urls.py  views.py
postgres_metrics/management/commands/: pgm_list_metrics.py  pgm_show_metric.py
postgres_metrics/static/postgres_metrics/css/: base.css  rtl.css
postgres_metrics/templates/admin/: index.html
postgres_metrics/templates/postgres_metrics/: table.html
postgres_metrics/templatetags/: postgres_metrics.py
postgres_stats/: apps.py  constants.py  urls.py  views.py
postgres_stats/static/postgres_stats/css/: base.css  rtl.css
postgres_stats/templates/admin/: index.html
postgres_stats/templates/postgres_stats/: table.html
postgres_stats/templatetags/: postgres_stats.py
tests/: settings.py  test_commands.py  test_liveserver.py  test_metrics.py  test_templatetags.py  test_views.py  urls.py
