[coverage:run]
branch = True
source = postgres_metrics/

[coverage:report]
# fail_under = 95
show_missing = True

[flake8]
exclude = build,dist,docs,.git,.tox
ignore = E123,E128,E265,E266,E402,E501,E731,W503,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_django = django
known_first_party = postgres_metrics
line_length = 79
multi_line_output = 5
not_skip = __init__.py
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[metadata]
license-file = LICENSE

[wheel]
universal = 1
